--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,24 @@
 {
-  "require":
-  {
-    "dharmendramca/SimpleSyntaxHighlighter": ">=1.0.0"
-  }
-  
+    "name": "simplesyntaxhigh/simplesyntaxhigh",
+    "type": "library",
+    "description": "Simple PHP Syntax Highlighter class",
+    "keywords": ["Syntax Highlighter","Simple Syntax"],
+    "homepage": "https://github.com/dharmendramca/SimpleSyntaxHighlighter",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Dharmendra Kumar",
+            "email": "dharmendramca.lko@gmail.com",
+            "homepage": "https://github.com/dharmendramca",
+            "role": "Website Developer"
+        }
+    ],
+    "require": {
+        "php": ">=5.3.0"
+    },
+    "autoload": {
+        "psr-0": {
+            "Monolog": "src"
+        }
+    }
 }
